objects/Dataset__c.object
<CustomObject>
    <fields>
        <fullName>Chart__c</fullName>
        <description>Chart</description>
        <inlineHelpText>Chart</inlineHelpText>
        <label>Chart</label>
        <referenceTo>Chart__c</referenceTo>
        <relationshipLabel>Datasets</relationshipLabel>
        <relationshipName>Datasets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_Label__c</fullName>
        <description>Group Label</description>
        <inlineHelpText>Group Label</inlineHelpText>
        <label>Group Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Label</description>
        <inlineHelpText>Label</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value</description>
        <inlineHelpText>Value</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dataset</label>
    <nameField>
        <label>Dataset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datasets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>